[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "P4PCore"
version = "0.1.4"
description = "P4PCore is library for secure p2p communication."
dependencies = [
    "cryptography",
    "xxhash",
    "pytest",
    "pytest-asyncio",
]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
